Fixed the spacing around the messaging buttons in the profile card

--- a/app/styles/components/_profile-card.scss
+++ b/app/styles/components/_profile-card.scss
@@ -22,6 +22,8 @@
 }
 
 .profile__messaging-options {
-  display: flex;
-  justify-content: space-around;
+  .btn {
+    margin: 10px;
+  }
+}
 }
